feat(expense-management): enhance Expense and Attachment services with file handling improvements
- Add logging to FileValidator for better debugging of file type validation.
- Refactor AttachmentService to include methods for extracting file names and extensions.
- Update ExpenseService to handle attachments more efficiently during expense creation and updates.
- Modify ExpenseRequest to enforce non-null validation for the amount field.
- Enhance LoginResponse DTO with JSON property annotations for better API response formatting.