@@ -2,8 +2,12 @@ package cm.bogne_stanley.money_flow.domain.service;
 
 import java.time.Instant;
 import java.time.ZoneOffset;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -11,6 +15,8 @@ import org.springframework.web.multipart.MultipartFile;
 import cm.bogne_stanley.money_flow.common.exception.BusinessException;
 import cm.bogne_stanley.money_flow.common.exception.CustomValidationException;
 import cm.bogne_stanley.money_flow.common.exception.ErrorCode;
+import cm.bogne_stanley.money_flow.common.mappers.ExpenseMapper;
+import cm.bogne_stanley.money_flow.data.entity.Attachment;
 import cm.bogne_stanley.money_flow.data.entity.Expense;
 import cm.bogne_stanley.money_flow.data.entity.ExpenseFrequency;
 import cm.bogne_stanley.money_flow.data.entity.ExpenseType;
@@ -18,6 +24,8 @@ import cm.bogne_stanley.money_flow.data.entity.User;
 import cm.bogne_stanley.money_flow.data.repository.CategoryRepository;
 import cm.bogne_stanley.money_flow.data.repository.ExpenseRepository;
 import cm.bogne_stanley.money_flow.presentation.dto.request.expense.ExpenseRequest;
+import cm.bogne_stanley.money_flow.presentation.dto.response.expense.ExpenseResponse;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 
 @Service
@@ -26,19 +34,36 @@ public class ExpenseService {
     private final ExpenseRepository expenseRepository;
     private final CategoryRepository categoryService;
     private final AttachmentService attachmentService;
+    private final ExpenseMapper expenseMapper;
+    private final Logger logger = LoggerFactory.getLogger(ExpenseService.class);
 
-    @SuppressWarnings("null")
-    public Expense createExpense(ExpenseRequest expenseRequest) {
+    public ExpenseResponse createExpense(ExpenseRequest expenseRequest) {
+        logger.info("Creating expense: {}", expenseRequest.attachments());
         var expense = handleExpense(new Expense(), expenseRequest);
-        return expenseRepository.save(expense);
+        var savedExpense = expenseRepository.save(expense);
+
+        if (expenseRequest.attachments() != null) {
+            var attachments = attachmentService.bulkCreateAttachments(savedExpense, expenseRequest.attachments());
+            savedExpense.setAttachments(attachments);
+            return expenseMapper.toResponse(expenseRepository.save(savedExpense));
+        }
+        return expenseMapper.toResponse(savedExpense);
     }
 
     @SuppressWarnings("null")
-    public Expense updateExpense(Long id, ExpenseRequest expenseRequest) {
+    @Transactional
+    public ExpenseResponse updateExpense(Long id, ExpenseRequest expenseRequest) {
         var existingExpense = expenseRepository.findByIdAndUser(id, getCurrentUser())
             .orElseThrow(() -> new BusinessException(ErrorCode.EXPENSE_NOT_FOUND));
-        var updatedExpense = handleExpense(existingExpense, expenseRequest);
-        return expenseRepository.save(updatedExpense);
+        var expense = handleExpense(existingExpense, expenseRequest);
+        var savedExpense = expenseRepository.save(expense);
+
+        if (expenseRequest.attachments() != null) {
+            var attachments = attachmentService.bulkCreateAttachments(savedExpense, expenseRequest.attachments());
+            savedExpense.setAttachments(attachments);
+            return expenseMapper.toResponse(expenseRepository.save(savedExpense));
+        }
+        return expenseMapper.toResponse(savedExpense);
     }
 
     @SuppressWarnings("null")
@@ -54,19 +79,19 @@ public class ExpenseService {
             .orElseThrow(() -> new BusinessException(ErrorCode.EXPENSE_NOT_FOUND));
     }
 
-    public Expense bulkDeleteAttachment(Long expenseId, List<Long> attachmentIds) {
+    public void bulkDeleteAttachment(Long expenseId, List<Long> attachmentIds) {
         var expense = expenseRepository.findByIdAndUser(expenseId, getCurrentUser())
             .orElseThrow(() -> new BusinessException(ErrorCode.EXPENSE_NOT_FOUND));
         
         var attachments = expense.getAttachments().stream()
             .filter(attachment -> attachmentIds.contains(attachment.getId()))
-            .toList();
+            .collect(Collectors.toCollection(ArrayList::new));
 
-        attachmentService.deleteAttachmentsByIds(attachments.stream().map(a -> a.getId()).toList());
+        attachmentService.deleteAttachmentsByIds(attachments.stream().map(Attachment::getId).collect(Collectors.toList()));
 
         expense.getAttachments().removeAll(attachments);
 
-        return expenseRepository.save(expense);
+        expenseRepository.saveAndFlush(expense);
     }
 
     public Expense addAttachment(Long expenseId,  List<MultipartFile> file) {
@@ -103,6 +128,7 @@ public class ExpenseService {
     }
 
     private Expense handleExpense(Expense expense, ExpenseRequest expenseRequest) {
+        
         expense.setTitle(expenseRequest.title());
         expense.setAmount(expenseRequest.amount());
         expense.setType(ExpenseType.valueOf(expenseRequest.type()));
@@ -134,12 +160,7 @@ public class ExpenseService {
             expense.setCategory(null);
         }
 
-        if (expenseRequest.attachments() != null) {
-            var attachments = attachmentService.bulkCreateAttachments(expense, expenseRequest.attachments());
-            expense.setAttachments(attachments);
-        }
         return expense;
-
     }
 
 }
